# navio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  evaluate.sh  evaluate_evo.sh
config/: camera_params.yaml
include/: bundle_adjuster.hpp  camera.hpp  feature_manager.hpp  frame.hpp  landmark.hpp  landmark_map.hpp  motion_estimator.hpp  reprojection_error.hpp  trajectory.hpp  visualiser.hpp
scripts/: evaluate_ate.py  evaluate_rpe.py
src/: bundle_adjuster.cpp  camera.cpp  feature_manager.cpp  frame.cpp  landmark_map.cpp  main.cpp  motion_estimator.cpp  trajectory.cpp  visualiser.cpp
